--- a/public/assignment/client/css/assignment-style.css
+++ b/public/assignment/client/css/assignment-style.css
@@ -210,3 +210,11 @@ select.form-control {
 .optionsBox {
     display: none;
 }
+
+.handle {
+    /*display: table;*/
+}
+.ui-sortable-helper {
+    width: auto !important;
+    height: auto !important;
+}
