--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -3,49 +3,28 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main fields">
             <h1>Fields for form '{{model.data.title}}'</h1>
 
-            <!-- <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div> -->
-
             <ul class="nav nav-tabs">
                 <li role="presentation"><a href="#forms">Forms</a></li>
                 <li role="presentation" class="active"><a href="#fields">Fields</a></li>
             </ul>
 
-            <table class="table table-responsive">
-                <tbody ng-model="model.fields" fields-sortable fields-sortable-callback="model.sortField(start, end)" as-sortable="model.sortableOptions">
+            <table class="table table-responsive" id="sort">
 
-                    <tr ng-switch="field.type" ng-repeat="field in model.fields" as-sortable-item>
+                <tbody id="ewq" ng-model="model.fields" fields-sortable fields-sortable-callback="model.sortField(start, end)">
+
+                    <tr ng-switch="field.type" ng-repeat="field in model.fields">
                         <td ng-switch-when="TEXT">
                             <label>{{field.label}}</label>
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="{{field.placeholder}}">
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <td ng-switch-when="TEXTAREA">
                             <label>{{field.label}}</label>
                             <div class="input-group">
                                 <textarea class="form-control" placeholder="{{field.placeholder}}"></textarea>
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <td ng-switch-when="OPTIONS">
@@ -54,17 +33,7 @@
                                 <select class="form-control">
                                     <option ng-repeat="option in field.options">{{option.label}}</option>
                                 </select>
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <td ng-switch-when="CHECKBOXES">
@@ -78,17 +47,7 @@
                                         <br>
                                     </div>
                                 </div>
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <td ng-switch-when="RADIOS">
@@ -99,34 +58,14 @@
                                         <input type="radio" name="{{option.label}}" value="{{option.value}}" checked> {{option.label}}
                                     </label>
                                 </div>
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <td ng-switch-default>
                             <label>{{field.label}}</label>
                             <div class="input-group">
                                 <input type="date" placeholder="{{field.placeholder}}" class="form-control">
-                                <div class="input-group-btn">
-                                    <button ng-click="model.editField(field)" type="button" class="btn btn-default" data-toggle="modal" data-target="#editField">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                    <button ng-click="model.deleteField(field)" type="button" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-default handle" id="myhandle" ng-mouseup="model.sortField()" as-sortable-item-handle>
-                                        <span class="glyphicon glyphicon-align-justify"></span>
-                                    </button>
-                                </div>
+                                <div class="input-group-btn" ng-include="'views/forms/field-buttons.html'"></div>
                             </div>
                         </td>
                         <br>
