--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -2,12 +2,17 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Admin</h1>
+
+            <br><br>
+
             <h3>Users</h3>
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>First Name</th>
+                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Last Name</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Role</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
                     </tr>
@@ -21,6 +26,12 @@
                             <input type="text" class="form-control" placeholder="Password">
                         </td>
                         <td>
+                            <input type="text" class="form-control" placeholder="First Name">
+                        </td>
+                        <td>
+                            <input type="text" class="form-control" placeholder="Last Name">
+                        </td>
+                        <td>
                             <div class="form-group">
                                 <select class="form-control">
                                     <option>User</option>
@@ -31,8 +42,8 @@
                             </div>
                         </td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                            <a href="#"><span class="glyphicon glyphicon-plus"></span>Add</a>
+                            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Update</a>
                         </td>
                     </tr>
                     <tr>
@@ -41,7 +52,7 @@
                         <td>Student</td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                     <tr>
@@ -50,7 +61,7 @@
                         <td>Faculty | Admin</td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                     <tr>
@@ -59,7 +70,7 @@
                         <td></td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 </tbody>
