--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -23,7 +23,7 @@
                             <input type="text" class="form-control" placeholder="Username">
                         </td>
                         <td>
-                            <input type="text" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password">
                         </td>
                         <td>
                             <input type="text" class="form-control" placeholder="First Name">
@@ -42,32 +42,16 @@
                             </div>
                         </td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-plus"></span>Add</a>
-                            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Update</a>
+                            <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
+                            <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                     <tr>
+                        <td>alice</td>
+                        <td>password</td>
                         <td>Alice</td>
-                        <td></td>
+                        <td>Wonderland</td>
                         <td>Student</td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Bob</td>
-                        <td></td>
-                        <td>Faculty | Admin</td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                        <td></td>
-                        <td></td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
                             <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
