--- a/public/assignment/client/views/forms/fields.view.html
+++ b/public/assignment/client/views/forms/fields.view.html
@@ -78,7 +78,7 @@
                 <div class="form-group">
                     <label for="newField" class="fields-label">Add A New Field:</label>
                     <div class="fields-form col-xs-10">
-                        <select ng-model="fieldType" id="newFieldType" class="form-control fields-form">
+                        <select ng-model="fieldType" id="newFieldType" class="form-control fields-form newFieldType">
                             <option value="" selected disabled>Select a field type</option>
                             <option>Single Line Text Field</option>
                             <option>Multi Line Text Field</option>
@@ -107,7 +107,7 @@
                         <div class="modal-body">
                             <form>
                                 <label>Type of Field</label>
-                                <select ng-model="fieldType" id="newFieldType" class="form-control fields-form">
+                                <select ng-model="fieldType" id="newFieldType" class="form-control fields-form newFieldType">
                                     <option value="" selected disabled>Select a field type</option>
                                     <option>Single Line Text Field</option>
                                     <option>Multi Line Text Field</option>
