--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -7,7 +7,7 @@
 
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#/forms">Forms</a></li>
-                <li role="presentation"><a href="#/form/:formId/fields">Fields</a></li>
+                <li role="presentation"><a href="">Fields</a></li>
             </ul>
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
