--- a/public/assignment/client/views/users/register.view.html
+++ b/public/assignment/client/views/users/register.view.html
@@ -31,6 +31,12 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="" class="col-sm-2 control-label">Role:</label>
+                    <div class="col-sm-10">
+                        <input ng-model="model.user.role" type="text" class="form-control" id="" placeholder="Role">
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default btn-lg" ng-click="model.register(model.user)">Register</button>
                     </div>
