--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -3,58 +3,57 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Admin</h1>
 
-            <br><br>
-
             <h3>Users</h3>
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
+                        <!-- <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>User ID</th> -->
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>First Name</th>
                         <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Last Name</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Role</th>
-                        <th><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+                        <th>Email(s)</th>
+                        <th>Roles</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
+                        <!-- <td>&nbsp;</td> -->
                         <td>
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input ng-model="user.username" class="form-control" placeholder="username"/>
                         </td>
                         <td>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input ng-model="user.password" class="form-control" type="password" placeholder="password"/>
                         </td>
                         <td>
-                            <input type="text" class="form-control" placeholder="First Name">
+                            <input ng-model="user.firstName" class="form-control" placeholder="first"/>
                         </td>
                         <td>
-                            <input type="text" class="form-control" placeholder="Last Name">
+                            <input ng-model="user.lastName" class="form-control" placeholder="last"/>
                         </td>
                         <td>
-                            <div class="form-group">
-                                <select class="form-control">
-                                    <option>User</option>
-                                    <option>Admin</option>
-                                    <option>Student</option>
-                                    <option>Faculty</option>
-                                </select>
-                            </div>
+                            <input ng-model="user.emails" class="form-control" type="email" placeholder="email"/>
+                        </td>
+                        <td>
+                            <input ng-model="user.roles" class="form-control" placeholder="roles" />
                         </td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
                             <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                         </td>
                     </tr>
-                    <tr>
-                        <td>alice</td>
-                        <td>password</td>
-                        <td>Alice</td>
-                        <td>Wonderland</td>
-                        <td>Student</td>
+                    <tr ng-repeat="user in users">
+                        <!-- <td>{{user._id}}</td> -->
+                        <td>{{user.username}}</td>
+                        <td>{{user.password}}</td>
+                        <td>{{user.firstName}}</td>
+                        <td>{{user.lastName}}</td>
+                        <td>{{user.emails}}</td>
+                        <td>{{user.roles}}</td>
                         <td>
-                            <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                            <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
+                            <a href="#" ng-click="remove(user)"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a href="#" ng-click="select(user)"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 </tbody>
