--- a/public/assignment/client/views/users/login.view.html
+++ b/public/assignment/client/views/users/login.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="LoginController" class="container-fluid">
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
             <h1>Login</h1>
             <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
             <form class="form-horizontal">
@@ -18,9 +18,23 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button ng-click="model.login(model.user)" type="submit" class="btn btn-default btn-lg">Login</button>
+                        <button ng-click="model.login(model.user)" type="submit" class="btn btn-default btn-md">Login</button>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-4">
+                        <a href="/auth/google" class="btn btn-block login-google">
+                            <i class="fa fa-google"></i>&nbsp;&nbsp;Log in with Google
+                        </a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a href="/auth/facebook" class="btn btn-block login-fb">
+                            <i class="fa fa-facebook-official"></i>&nbsp;&nbsp;Log in with Facebook
+                        </a>
+                    </div>
+                </div>
+
             </form>
         </div>
     </div>
