--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProfileController as model" class="container-fluid">
     <!-- {{currentUser}} -->
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
             <h1>Profile</h1>
 
             <!-- {{currentUser}} -->
@@ -55,7 +55,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10 col-md-10">
-                        <button ng-click="model.update(currentUser)" type="submit" class="btn btn-default btn-lg">Update</button>
+                        <button ng-click="model.update(currentUser)" type="submit" class="btn btn-default btn-md">Update</button>
                     </div>
                 </div>
             </form>
